[package]
name = "neumann_server"
description = "gRPC server exposing Neumann database via QueryRouter"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["database", "grpc", "tensor", "server"]
categories = ["database", "network-programming"]
rust-version.workspace = true
readme = "../README.md"

[dependencies]
query_router = { path = "../query_router" }
tensor_blob = { path = "../tensor_blob" }
tensor_store = { path = "../tensor_store" }
relational_engine = { path = "../relational_engine" }
vector_engine = { path = "../vector_engine" }
graph_engine = { path = "../graph_engine" }
tonic.workspace = true
tonic-prost.workspace = true
tonic-web = "0.14"
tonic-reflection = "0.14"
prost.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "signal", "macros", "time", "net"] }
tokio-stream.workspace = true
parking_lot.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
bytes.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.31", features = ["metrics", "grpc-tonic"] }
uuid.workspace = true
tower = { version = "0.5", features = ["limit", "load-shed", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
axum = { version = "0.8", features = ["json", "macros"] }
maud = { version = "0.27", features = ["axum"] }
urlencoding = "2"
x509-parser.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
tensor_unified = { path = "../tensor_unified" }
query_router = { path = "../query_router" }
futures.workspace = true
tokio-stream.workspace = true
criterion.workspace = true
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[[bench]]
name = "web_bench"
harness = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
