[package]
name = "neumann_shell"
version = "0.1.0"
edition = "2021"
description = "Interactive CLI shell for Neumann database"
license = "MIT"

[dependencies]
query_router = { path = "../query_router" }
relational_engine = { path = "../relational_engine" }
tensor_store = { path = "../tensor_store" }
tensor_compress = { path = "../tensor_compress" }
tensor_chain = { path = "../tensor_chain" }
rustyline = "15"
base64 = "0.22"
parking_lot = "0.12"

[[bin]]
name = "neumann"
path = "src/main.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
peak_alloc = "0.2"

[[bench]]
name = "neumann_shell_bench"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
