[package]
name = "neumann_shell"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Interactive CLI shell for Neumann database"
readme = "README.md"
keywords = ["database", "cli", "tensor", "shell", "repl"]
categories = ["database", "command-line-utilities"]
exclude = ["benches/*", "*.profraw"]

[dependencies]
query_router = { path = "../query_router" }
relational_engine = { path = "../relational_engine" }
tensor_store = { path = "../tensor_store" }
tensor_compress = { path = "../tensor_compress" }
tensor_chain = { path = "../tensor_chain" }
tensor_checkpoint = { path = "../tensor_checkpoint" }
tensor_unified = { path = "../tensor_unified" }
rustyline = "17"
base64.workspace = true
parking_lot.workspace = true
clap = { workspace = true, features = ["env"] }

# Terminal UX
owo-colors = "4"
indicatif = "0.18"
tabled = { version = "0.20", default-features = false, features = ["std", "derive"] }
console = "0.16"

# TRO (Tensor Rust Organism) border animation
crossbeam-channel.workspace = true
smallvec = "1.11"
rand.workspace = true

# System info for doctor diagnostics
sys-info = "0.9"

# TLS certificate parsing for doctor diagnostics
x509-parser.workspace = true

[build-dependencies]
clap.workspace = true
clap_complete = "4"
clap_mangen = "0.2"

[[bin]]
name = "neumann"
path = "src/main.rs"

[dev-dependencies]
criterion.workspace = true
peak_alloc = "0.3"

[[bench]]
name = "neumann_shell_bench"
harness = false

[lints]
workspace = true
