[package]
name = "query_router"
version = "0.1.0"
edition = "2021"

[dependencies]
tensor_store = { path = "../tensor_store" }
tensor_chain = { path = "../tensor_chain" }
relational_engine = { path = "../relational_engine" }
graph_engine = { path = "../graph_engine" }
vector_engine = { path = "../vector_engine" }
tensor_unified = { path = "../tensor_unified" }
tensor_vault = { path = "../tensor_vault" }
tensor_cache = { path = "../tensor_cache" }
tensor_blob = { path = "../tensor_blob", features = ["full"] }
tensor_checkpoint = { path = "../tensor_checkpoint" }
neumann_parser = { path = "../neumann_parser" }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "fs"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitcode = { version = "0.6", features = ["serde"] }
hex = "0.4"
rand = "0.8"
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "query_router_bench"
harness = false

