[package]
name = "query_router"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
description = "Unified query routing across relational, graph, and vector engines"

[dependencies]
tensor_store = { path = "../tensor_store" }
tensor_chain = { path = "../tensor_chain" }
relational_engine = { path = "../relational_engine" }
graph_engine = { path = "../graph_engine" }
vector_engine = { path = "../vector_engine" }
tensor_unified = { path = "../tensor_unified" }
tensor_vault = { path = "../tensor_vault" }
tensor_cache = { path = "../tensor_cache" }
tensor_blob = { path = "../tensor_blob", features = ["full"] }
tensor_checkpoint = { path = "../tensor_checkpoint" }
neumann_parser = { path = "../neumann_parser" }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "fs"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
bitcode.workspace = true
hex.workspace = true
rand = "0.8"
tracing.workspace = true
base64.workspace = true
dashmap.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "query_router_bench"
harness = false

[lints]
workspace = true
