[package]
name = "relational_engine"
version = "0.1.0"
edition = "2021"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[features]
test-internals = []

[dependencies]
tensor_store = { path = "../tensor_store" }
rayon = "1.10"
wide = "0.7"
serde = { version = "1", features = ["derive"] }
parking_lot = "0.12"
dashmap = "5"
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "relational_engine_bench"
harness = false
