[package]
name = "relational_engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
description = "SQL-like relational engine with SIMD-accelerated filtering and columnar storage"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[features]
test-internals = []

[dependencies]
tensor_store = { path = "../tensor_store" }
rayon = "1.10"
wide = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
parking_lot = "0.12"
dashmap = "6"
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "relational_engine_bench"
harness = false
