[package]
name = "relational_engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
description = "SQL-like relational engine with SIMD-accelerated filtering and columnar storage"

[features]
test-internals = []

[dependencies]
tensor_store = { path = "../tensor_store" }
rayon.workspace = true
wide = "0.7"
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "relational_engine_bench"
harness = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
