[package]
name = "stress_tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tensor_store = { path = "../tensor_store" }
tensor_compress = { path = "../tensor_compress" }
relational_engine = { path = "../relational_engine" }
graph_engine = { path = "../graph_engine" }
vector_engine = { path = "../vector_engine" }
tensor_vault = { path = "../tensor_vault" }
tensor_cache = { path = "../tensor_cache" }
tensor_blob = { path = "../tensor_blob", features = ["full"] }
tensor_checkpoint = { path = "../tensor_checkpoint" }
tensor_unified = { path = "../tensor_unified" }
query_router = { path = "../query_router" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"
rayon = "1.10"
hdrhistogram = "7.5"
rand = "0.8"
rand_chacha = "0.3"
tempfile = "3"
