[package]
name = "stress_tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
description = "Performance and concurrency stress tests for Neumann"

[dependencies]
tensor_store = { path = "../tensor_store" }
tensor_compress = { path = "../tensor_compress" }
tensor_chain = { path = "../tensor_chain" }
relational_engine = { path = "../relational_engine" }
graph_engine = { path = "../graph_engine" }
vector_engine = { path = "../vector_engine" }
tensor_vault = { path = "../tensor_vault" }
tensor_cache = { path = "../tensor_cache" }
tensor_blob = { path = "../tensor_blob", features = ["full"] }
tensor_checkpoint = { path = "../tensor_checkpoint" }
tensor_unified = { path = "../tensor_unified" }
query_router = { path = "../query_router" }
integration_tests = { path = "../integration_tests" }

tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
futures.workspace = true
rayon.workspace = true
hdrhistogram = "7.5"
rand.workspace = true
rand_chacha = "0.10"
tempfile.workspace = true

[lints]
workspace = true
