[package]
name = "tensor_blob"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
description = "Content-addressable blob storage with streaming and garbage collection"

[dependencies]
tensor_store = { path = "../tensor_store" }
graph_engine = { path = "../graph_engine", optional = true }
vector_engine = { path = "../vector_engine", optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time", "macros"] }
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[features]
default = []
graph = ["graph_engine"]
vector = ["vector_engine"]
full = ["graph", "vector"]

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "blob_bench"
harness = false

[lints]
workspace = true
