[package]
name = "tensor_cache"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
description = "Multi-layer LLM response cache with exact, semantic, and embedding lookup"

[dependencies]
# Internal
tensor_store = { path = "../tensor_store" }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Token counting
tiktoken-rs = "0.9"

# Serialization
serde.workspace = true
bitcode.workspace = true

# Data structures
dashmap.workspace = true
uuid.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
tokio-test.workspace = true
serde_json.workspace = true

[[bench]]
name = "cache_bench"
harness = false

[lints]
workspace = true
