[package]
name = "tensor_chain"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["blockchain", "tensor", "consensus", "distributed"]
categories = ["database", "cryptography"]
rust-version.workspace = true
readme = "../README.md"
description = "Tensor-native blockchain with semantic conflict detection and auto-merge"

[dependencies]
# Core Neumann modules
tensor_store = { path = "../tensor_store" }
tensor_compress = { path = "../tensor_compress" }
graph_engine = { path = "../graph_engine" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
bitcode = { version = "0.6", features = ["serde"] }

# Crypto
sha2 = "0.10"
blake2 = "0.10"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
zeroize = { version = "1", features = ["derive"] }

# Concurrency
dashmap = "5"
parking_lot = "0.12"

# Utilities
uuid = { version = "1", features = ["v4"] }
memmap2 = "0.9"
thiserror = "1"
hex = "0.4"
tracing = "0.1"
crc32fast = "1.4"
libc = "0.2"

# TCP transport
bytes = "1.11"
socket2 = { version = "0.5", features = ["all"] }
lz4_flex = "0.12"

# Optional TLS support
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2", optional = true }
x509-parser = { version = "0.16", optional = true }

[features]
default = ["tls"]
tls = ["tokio-rustls", "rustls-pemfile", "x509-parser"]
loom = ["dep:loom"]

[dependencies.loom]
version = "0.7"
optional = true

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
rcgen = "0.13"
tempfile = "3.10"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = { version = "0.23", features = ["ring"] }
proptest = "1.6"
proptest-state-machine = "0.7"

[[bench]]
name = "tensor_chain_bench"
harness = false
