[package]
name = "tensor_chain"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["blockchain", "tensor", "consensus", "distributed"]
categories = ["database", "cryptography"]
rust-version.workspace = true
readme = "../README.md"
description = "Tensor-native blockchain with semantic conflict detection and auto-merge"

[dependencies]
# Core Neumann modules
tensor_store = { path = "../tensor_store" }
tensor_compress = { path = "../tensor_compress" }
graph_engine = { path = "../graph_engine" }

# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true

# Serialization
serde.workspace = true
bitcode.workspace = true

# Crypto
sha2.workspace = true
blake2.workspace = true
rand.workspace = true
rand_core_06 = { package = "rand_core", version = "0.6", features = ["getrandom"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
zeroize.workspace = true

# Concurrency
dashmap.workspace = true
parking_lot.workspace = true

# Utilities
uuid.workspace = true
memmap2.workspace = true
thiserror.workspace = true
hex.workspace = true
tracing.workspace = true
crc32fast.workspace = true
libc.workspace = true

# TCP transport
bytes.workspace = true
socket2 = { version = "0.5", features = ["all"] }
lz4_flex = "0.12"

# Optional TLS support
tokio-rustls = { version = "0.26", optional = true }
x509-parser = { workspace = true, optional = true }

[features]
default = ["tls"]
tls = ["tokio-rustls", "x509-parser"]
loom = ["dep:loom"]

[dependencies.loom]
version = "0.7"
optional = true

[dev-dependencies]
criterion.workspace = true
tokio-test.workspace = true
rcgen.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true
rustls = { version = "0.23", features = ["ring"] }
proptest = "1.6"
proptest-state-machine = "0.7"

[[bench]]
name = "tensor_chain_bench"
harness = false

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
