[package]
name = "tensor_checkpoint"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../README.md"
description = "Checkpoint and rollback system for Neumann database"

[dependencies]
tensor_store = { path = "../tensor_store" }
tensor_blob = { path = "../tensor_blob" }
serde.workspace = true
bitcode.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time", "macros"] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
criterion.workspace = true

[[bench]]
name = "checkpoint_bench"
harness = false

[lints]
workspace = true
