[package]
name = "tensor_compress"
version = "0.1.0"
edition = "2021"
description = "Bespoke compression for tensor data: vector quantization, delta encoding, RLE"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
bitcode = { version = "0.6", features = ["serde"] }
thiserror = "2"
rayon = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
peak_alloc = "0.2"

[[bench]]
name = "tensor_compress_bench"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
