[package]
name = "tensor_compress"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
description = "Tensor Train decomposition, delta encoding, and RLE compression for tensor data"

[dependencies]
serde = { version = "1", features = ["derive"] }
bitcode = { version = "0.6", features = ["serde"] }
thiserror = "2"
rayon = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
peak_alloc = "0.3"

[[bench]]
name = "tensor_compress_bench"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
