[package]
name = "tensor_compress"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
description = "Tensor Train decomposition, delta encoding, and RLE compression for tensor data"

[dependencies]
serde.workspace = true
bitcode.workspace = true
thiserror.workspace = true
rayon.workspace = true

[dev-dependencies]
criterion.workspace = true
peak_alloc = "0.3"

[[bench]]
name = "tensor_compress_bench"
harness = false

[lints]
workspace = true
