[package]
name = "tensor_store"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
tensor_compress = { path = "../tensor_compress" }
wide = "0.7"
memmap2 = "0.9"
fxhash = "0.2"
parking_lot = "0.12"
bitvec = { version = "1", features = ["serde"] }
crc32fast = "1.4"
thiserror = "2"
zstd = "0.13"
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "tensor_store_bench"
harness = false
