[package]
name = "tensor_store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
description = "Core tensor-based key-value storage with HNSW indexing and tiered caching"

[dependencies]
serde = { version = "1", features = ["derive"] }
bitcode = { version = "0.6", features = ["serde"] }
tensor_compress = { path = "../tensor_compress" }
wide = "0.7"
memmap2 = "0.9"
rustc-hash = "2"
parking_lot = "0.12"
bitvec = { version = "1", features = ["serde"] }
crc32fast = "1.4"
thiserror = "2"
zstd = "0.13"
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "tensor_store_bench"
harness = false

[[bench]]
name = "hnsw_concurrent_bench"
harness = false
