[package]
name = "tensor_store"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
description = "Core tensor-based key-value storage with HNSW indexing and tiered caching"

[dependencies]
serde.workspace = true
bitcode.workspace = true
tensor_compress = { path = "../tensor_compress" }
wide = "0.7"
memmap2.workspace = true
rustc-hash = "2"
parking_lot.workspace = true
bitvec = { version = "1", features = ["serde"] }
crc32fast.workspace = true
thiserror.workspace = true
zstd = "0.13"
tracing.workspace = true
blake3 = "1"
hex.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "tensor_store_bench"
harness = false

[[bench]]
name = "hnsw_concurrent_bench"
harness = false

[[bench]]
name = "wal_bench"
harness = false

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
