[package]
name = "tensor_unified"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../README.md"
description = "Cross-engine unified query execution for Neumann"

[dependencies]
tensor_store = { path = "../tensor_store" }
relational_engine = { path = "../relational_engine" }
graph_engine = { path = "../graph_engine" }
vector_engine = { path = "../vector_engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "macros"] }
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "macros", "test-util"] }

[[bench]]
name = "tensor_unified_bench"
harness = false
