[package]
name = "tensor_unified"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../README.md"
description = "Cross-engine unified query execution for Neumann"

[dependencies]
tensor_store = { path = "../tensor_store" }
relational_engine = { path = "../relational_engine" }
graph_engine = { path = "../graph_engine" }
vector_engine = { path = "../vector_engine" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros"] }
futures.workspace = true

[dev-dependencies]
criterion.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros", "test-util"] }

[[bench]]
name = "tensor_unified_bench"
harness = false

[lints]
workspace = true
