[package]
name = "tensor_vault"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
description = "AES-256-GCM encrypted secret storage with graph-based access control"

[dependencies]
tensor_store = { path = "../tensor_store" }
graph_engine = { path = "../graph_engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
blake2 = "0.10"
hkdf = "0.12"
rand = "0.8"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"

[features]
fuzzing = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
peak_alloc = "0.2"
serial_test = "3"

[[bench]]
name = "tensor_vault_bench"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
