[package]
name = "tensor_vault"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
description = "AES-256-GCM encrypted secret storage with graph-based access control"

[dependencies]
tensor_store = { path = "../tensor_store" }
graph_engine = { path = "../graph_engine" }
tensor_compress = { path = "../tensor_compress" }
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
blake2.workspace = true
hkdf = "0.12"
rand.workspace = true
sha2.workspace = true
zeroize.workspace = true
base64.workspace = true

# X.509 certificate generation for PKI engine
rcgen.workspace = true

[features]
fuzzing = []

[dev-dependencies]
criterion.workspace = true
peak_alloc = "0.3"
serial_test = "3"

[[bench]]
name = "tensor_vault_bench"
harness = false

[lints]
workspace = true
