[package]
name = "vector_engine"
version = "0.1.0"
edition = "2021"
description = "k-NN similarity search engine with HNSW support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthropics/neumann"
documentation = "https://docs.rs/vector_engine"
authors = ["Neumann Contributors"]
keywords = ["vector", "embedding", "similarity", "hnsw", "knn"]
categories = ["database", "science"]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[dependencies]
tensor_store = { path = "../tensor_store" }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "vector_engine_bench"
harness = false
