[package]
name = "vector_engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
description = "k-NN similarity search engine with HNSW indexing and multiple distance metrics"

[dependencies]
tensor_store = { path = "../tensor_store" }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
bitcode.workspace = true
tracing.workspace = true
parking_lot.workspace = true

[dev-dependencies]
criterion.workspace = true
rand = "0.8"
tempfile.workspace = true

[[bench]]
name = "vector_engine_bench"
harness = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
