[package]
name = "neumann-native"
version = "0.1.0"
edition = "2021"
description = "Native Python bindings for Neumann database"
license = "MIT"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
query_router = { path = "../../query_router" }
relational_engine = { path = "../../relational_engine" }
parking_lot = "0.12"
tensor_store = { path = "../../tensor_store" }
tensor_compress = { path = "../../tensor_compress" }
tensor_unified = { path = "../../tensor_unified" }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
pyo3-build-config = "0.22"
